GNOME Bugzilla – Bug 748746
New folder is not revealed after creation
Last modified: 2016-03-02 13:55:01 UTC
Hi, it seems the New Folder dialog has introduced this regression, when the new folder is created and (by chance of the current sort order) is put outside the current screen view, the new folder is not revealed. I can reproduce it both in icon view and list view.
Created attachment 304185 [details] [review] Reveal new folder Besides selecting, also reveal new folder after creation.
Created attachment 322856 [details] [review] files-view: reveal folder on creation We weren't revealing the folder on creation, since when we moved from inline renaming to a dialog the folder was not revealed on creation but instead on renaming. To fix it, reveal the folder on creation. Patch made by Nelson Benitez.
Thanks Nelson for the patch and sorry it took so long to review. Attachment 322856 [details] pushed as ec34284 - files-view: reveal folder on creation