files-view: reveal folder on creation

We weren't revealing the folder on creation, since when we moved from
inline renaming to a dialog the folder was not revealed on creation
but instead on renaming.

To fix it, reveal the folder on creation.

Patch made by Nelson Benitez.

https://bugzilla.gnome.org/show_bug.cgi?id=748746